microservice-archt/infra/k8s/metricbeat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metricbeat
spec:
  selector:
    matchLabels:
      app: metricbeat
  template:
    metadata:
      labels:
        app: metricbeat
    spec:
      serviceAccountName: metricbeat
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        effect: NoSchedule
      containers:
      - name: metricbeat
        image: elastic/metricbeat:8.15.5
        volumeMounts:
        - name: metricbeat-config
          mountPath: /usr/share/metricbeat/metricbeat.yaml
          subPath: metricbeat.yml
        resources:
          limits:
            memory: "1Gi"
            cpu: "1"
      volumes:
      - name: metricbeat-config
        configMap:
          name: metricbeat-config
