microservice-archt/infra/k8s/redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-depl
  template:
    metadata:
      labels:
        app: redis-depl
    spec:
      containers:
      - name: redis-depl
        image: redis:alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-srv
spec:
  selector:
    app: redis-depl
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
